CSS: Bugfix, stretch sidebar always to full width

--- a/www/index.css
+++ b/www/index.css
@@ -29,6 +29,8 @@ a:hover {
 #sidebar {
   top: 0px;
   bottom: 0px;
+  left: 0px;
+  right: 0px;
   margin-left:10px;
   margin-right:10px;
   position: absolute;
